[package]
authors = ["tekjar <raviteja@bytebeam.io>"]
categories = ["network-programming"]
description = "Distributed, embeddable mqtt broker library"
edition = "2018"
keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
license = "Apache-2.0"
name = "rumqttd"
repository = "https://github.com/bytebeamio/rumqtt/"
version = "0.11.0"

[lib]
name = "librumqttd"
path = "src/lib.rs"

[features]
default = ["use-rustls"]
prof = ["pprof"]
use-native-tls = ["tokio-native-tls"]
use-rustls = ["tokio-rustls", "rustls-pemfile"]

[dependencies]
argh = "0.1"
bytes = "1"
confy = "0.4"
futures-util = "0.3"
hex = "*"
jackiechan = "0.0.4"
log = "0.4"
pretty_env_logger = "0.4"
segments = "0.1"
serde = {version = "1", features = ["derive"]}
thiserror = "1"
tokio = {version = "1", features = ["full"]}
warp = "0.3"

# Optional
rustls-pemfile = {version = "0.3", optional = true}
tokio-native-tls = {version = "0.3", optional = true}
tokio-rustls = {version = "0.23", optional = true}

[dev-dependencies]
pretty_assertions = "0.6"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"
pprof = {version = "0.4", features = ["flamegraph", "protobuf"], optional = true}
