[package]
authors = ["tekjar <raviteja@bytebeam.io>"]
categories = ["network-programming"]
description = "rumqttd is a high performance MQTT broker written in Rust which is light weight and embeddable"
edition = "2021"
keywords = ["mqtt", "broker", "iot", "kafka", "nats"]
license = "Apache-2.0"
name = "rumqttd"
repository = "https://github.com/bytebeamio/rumqtt/"
version = "0.12.0-alpha.3"

[dependencies]
bytes = {version = "1", features = ["serde"]}
config = "0.13"
figment = {version = "0.10.5", features = ["toml", "env"]}
flume = "0.10.9"
futures-util = "0.3.16"
log = "0.4.14"
parking_lot = "0.11.2"
rouille = "3.1.1"
rustls-pemfile = {version = "0.3.0", optional = true}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.66"
simplelog = "0.12.0"
slab = "0.4.3"
structopt = "0.3.26"
thiserror = "1.0.24"
tokio = {version = "1.4.0", features = ["rt", "time", "net", "io-util", "macros"]}
tokio-native-tls = {version = "0.3", optional = true}
tokio-rustls = {version = "0.23.0", optional = true}
tokio-tungstenite = {version = "0.15.0", optional = true}
tokio-util = {version = "0.7", features = ["codec"]}
websocket-codec = {version = "0.5.1", optional = true}
ws_stream_tungstenite = {version = "0.8", optional = true}
x509-parser = {version = "0.9.2", optional = true}

[features]
default = ["use-rustls"]
use-native-tls = ["tokio-native-tls", "x509-parser"]
use-rustls = ["tokio-rustls", "rustls-pemfile", "x509-parser"]
websockets = ["tokio-tungstenite", "ws_stream_tungstenite", "websocket-codec"]

[dev-dependencies]
config = "0.13"
mqttbytes = "0.6"
pretty_assertions = "1.3.0"
pretty_env_logger = "0.4.0"

[target.'cfg(not(any(target_env = "msvc", target_env = "musl")))'.dependencies]
jemallocator = "0.5"

[build-dependencies]
vergen = "7.4.2"
